force-app/main/default/objects/Campaign/fields/Achieved_Target__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Target__c</fullName>
    <description>Achieved Target in percentage</description>
    <formula>AmountWonOpportunities / Pledged_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achieved Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>