force-app/main/default/objects/Campaign/fields/Available_Amount__c.field-meta.xml
<CustomField>
    <fullName>Available_Amount__c</fullName>
    <formula>HierarchyAmountAllOpportunities  -  Total_Funds_Allocated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>