force-app/main/default/objects/Campaign/fields/Call_List_Clearing_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Call_List_Clearing_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call List Clearing In Progress</label>
    <type>Checkbox</type>
</CustomField>