force-app/main/default/objects/Campaign/fields/Casesafe_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Casesafe_Campaign_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Casesafe Campaign ID</label>
    <type>Text</type>
</CustomField>