force-app/main/default/objects/Campaign/fields/City_Code__c.field-meta.xml
<CustomField>
    <fullName>City_Code__c</fullName>
    <label>City Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>