force-app/main/default/objects/Campaign/fields/Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time__c</fullName>
    <label>Created Date:Time</label>
    <type>DateTime</type>
</CustomField>