force-app/main/default/objects/Campaign/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comms</fullName>
            </value>
            <value>
                <fullName>Donor Care</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>Emerging Market</fullName>
            </value>
            <value>
                <fullName>ME Fund Development</fullName>
            </value>
            <value>
                <fullName>Institutional Funding</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>