force-app/main/default/objects/Campaign/fields/Description_detail__c.field-meta.xml
<CustomField>
    <fullName>Description_detail__c</fullName>
    <description>Describe what will happen;</description>
    <inlineHelpText>Describe what will happen;Attach itinerary if possible</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>