force-app/main/default/objects/Campaign/fields/Dialer_Queue__c.field-meta.xml
<CustomField>
    <fullName>Dialer_Queue__c</fullName>
    <label>Dialer Queue</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Regional_Office_Code__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dialer_Queue_UK_1</fullName>
                <default>true</default>
                <label>Dialer_Queue_UK_1</label>
            </value>
            <value>
                <fullName>Dialer_Queue_UK_2</fullName>
            </value>
            <value>
                <fullName>Dialer_Queue_UK_3</fullName>
            </value>
            <value>
                <fullName>Dialer_Queue_UK_4</fullName>
            </value>
            <value>
                <fullName>Dialer_Queue_UK_5</fullName>
            </value>
            <value>
                <fullName>Dialer_Queue_FR_1</fullName>
            </value>
            <value>
                <fullName>Dialer_Queue_FR_2</fullName>
            </value>
            <value>
                <fullName>Dialer Queue_IE _1</fullName>
                <label>Dialer Queue_IE_1</label>
            </value>
            <value>
                <fullName>Dialer_Queue_ES_1</fullName>
            </value>
            <value>
                <fullName>Dialer_Queue_US_1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>