force-app/main/default/objects/Campaign/fields/DMS_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>DMS_Campaign_ID__c</fullName>
    <externalId>true</externalId>
    <label>DMS Campaign ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>