force-app/main/default/objects/Campaign/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pledges</relationshipLabel>
    <relationshipName>Donor</relationshipName>
    <type>Lookup</type>
</CustomField>