force-app/main/default/objects/Campaign/fields/Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notify Owner on Reaching Response Rate Threshold (50% / 90%)</description>
    <label>Email Notification</label>
    <type>Checkbox</type>
</CustomField>