force-app/main/default/objects/Campaign/fields/Event_Acronym__c.field-meta.xml
<CustomField>
    <fullName>Event_Acronym__c</fullName>
    <label>Event Acronym</label>
    <length>255</length>
    <type>Text</type>
</CustomField>