force-app/main/default/objects/Campaign/fields/Event_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Location_Code__c</fullName>
    <label>Event Location Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>