force-app/main/default/objects/Campaign/fields/FR_Unique_Number__c.field-meta.xml
<CustomField>
    <fullName>FR_Unique_Number__c</fullName>
    <externalId>true</externalId>
    <label>FR Unique Number</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>