force-app/main/default/objects/Campaign/fields/Fundraiser__c.field-meta.xml
<CustomField>
    <fullName>Fundraiser__c</fullName>
    <label>Fundraiser</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aamilah Begum</fullName>
            </value>
            <value>
                <fullName>Abdullah Saheb​</fullName>
            </value>
            <value>
                <fullName>Abdul Malik</fullName>
            </value>
            <value>
                <fullName>Adnan Iqbal</fullName>
            </value>
            <value>
                <fullName>Ahmed Osman</fullName>
            </value>
            <value>
                <fullName>Alina Ali</fullName>
            </value>
            <value>
                <fullName>Ausba Zanib</fullName>
            </value>
            <value>
                <fullName>Ebrahem Ettoubi</fullName>
            </value>
            <value>
                <fullName>Fahad Khan</fullName>
            </value>
            <value>
                <fullName>FR LEAVER</fullName>
            </value>
            <value>
                <fullName>Haitham Aboshady</fullName>
            </value>
            <value>
                <fullName>Heshmatullah Tajik​</fullName>
            </value>
            <value>
                <fullName>Inam Malik</fullName>
            </value>
            <value>
                <fullName>Junaid Afzal</fullName>
            </value>
            <value>
                <fullName>Khaled Gamal</fullName>
            </value>
            <value>
                <fullName>Khalil Benkhalil</fullName>
            </value>
            <value>
                <fullName>Mahmoud Yousif​</fullName>
            </value>
            <value>
                <fullName>Mohammed Abid Shah</fullName>
            </value>
            <value>
                <fullName>Mohammed Kalam</fullName>
            </value>
            <value>
                <fullName>Sefyan Abdulmula</fullName>
            </value>
            <value>
                <fullName>Sibbat Noor</fullName>
            </value>
            <value>
                <fullName>Ubaidah Omar</fullName>
            </value>
            <value>
                <fullName>Zainab Siddiqui​</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>