force-app/main/default/objects/Campaign/fields/Fundraiser_Code__c.field-meta.xml
<CustomField>
    <fullName>Fundraiser_Code__c</fullName>
    <label>Fundraiser Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>