force-app/main/default/objects/Campaign/fields/Fundraiser_Person__c.field-meta.xml
<CustomField>
    <fullName>Fundraiser_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead fundraiser for this event</description>
    <inlineHelpText>Lead fundraiser for this event</inlineHelpText>
    <label>Fundraiser Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fundraiser</relationshipName>
    <type>Lookup</type>
</CustomField>