force-app/main/default/objects/Campaign/fields/Fundraising_Objective_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Objective_Purpose__c</fullName>
    <label>Fundraising Objective/ Purpose</label>
    <type>TextArea</type>
</CustomField>