force-app/main/default/objects/Campaign/fields/Fundraising_page_url__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_page_url__c</fullName>
    <label>Fundraising page url</label>
    <type>Url</type>
</CustomField>