force-app/main/default/objects/Campaign/fields/Fundraising_Team_Code__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Team_Code__c</fullName>
    <formula>CASE(Region__c,  
&quot;1. Philanthropy London &amp; South&quot;,&quot;,PLNS&quot;,
&quot;2. Philanthropy Midlands, North &amp; Scotland&quot;,&quot;,PMNS&quot;,
&quot;3. CFR London &amp; South (LNS)&quot;,&quot;,LNS&quot;,
&quot;4. CFR Midlands, North &amp; Scotland (MNS)&quot;,&quot;,MNS&quot;,
&quot;5. Challenges&quot;,&quot;,CHL&quot;,
&quot;6. Partnership&quot;,&quot;,PTS&quot;,
&quot;7. HLP (Humanitarian Leadership Team)&quot;,&quot;,HLP&quot;,
&quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fundraising Team Code</label>
    <type>Text</type>
</CustomField>