force-app/main/default/objects/Campaign/fields/Grandparent_Campaign_Casesafe_Id__c.field-meta.xml
<CustomField>
    <fullName>Grandparent_Campaign_Casesafe_Id__c</fullName>
    <formula>CASESAFEID(Parent.ParentId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grandparent Campaign Casesafe Id</label>
    <type>Text</type>
</CustomField>