force-app/main/default/objects/Campaign/fields/GW_Volunteers__Volunteer_Jobs__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Volunteer_Jobs__c</fullName>
    <label>Volunteer Jobs</label>
    <summaryForeignKey>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Campaign__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>