force-app/main/default/objects/Campaign/fields/Long_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Long_Name_Field__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Long Name Field</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>