force-app/main/default/objects/Campaign/fields/Max_Call_Retry__c.field-meta.xml
<CustomField>
    <fullName>Max_Call_Retry__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Max Call Retry</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>