force-app/main/default/objects/Campaign/fields/Money_Saved__c.field-meta.xml
<CustomField>
    <fullName>Money_Saved__c</fullName>
    <description>Money Saved due to Volunteers engagement</description>
    <formula>GW_Volunteers__Number_of_Volunteers__c * 8.21</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Money Saved in GBP</inlineHelpText>
    <label>Money Saved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>