force-app/main/default/objects/Campaign/fields/Number_of_attendees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_attendees__c</fullName>
    <description>Estimated Number of Attendees</description>
    <inlineHelpText>Estimated Number of Attendees</inlineHelpText>
    <label>Number of attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>