force-app/main/default/objects/Campaign/fields/Parent_Campaign_CasesafeID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Campaign_CasesafeID__c</fullName>
    <formula>CASESAFEID(ParentId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Campaign CasesafeID</label>
    <type>Text</type>
</CustomField>