force-app/main/default/objects/Campaign/fields/Pledged_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pledged_Amount__c</fullName>
    <label>Pledged Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>