force-app/main/default/objects/Campaign/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <inlineHelpText>In DMS, this was put in the &apos;Region&apos; field</inlineHelpText>
    <label>Fundraising Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>1. Philanthropy London &amp; South</fullName>
            </value>
            <value>
                <fullName>2. Philanthropy Midlands, North &amp; Scotland</fullName>
            </value>
            <value>
                <fullName>3. CFR London &amp; South (LNS)</fullName>
            </value>
            <value>
                <fullName>4. CFR Midlands, North &amp; Scotland (MNS)</fullName>
            </value>
            <value>
                <fullName>5. Challenges</fullName>
            </value>
            <value>
                <fullName>6. Partnership</fullName>
            </value>
            <value>
                <fullName>7. HLP (Humanitarian Leadership Team)</fullName>
            </value>
            <value>
                <fullName>UK Programmes (UKP)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>