force-app/main/default/objects/Campaign/fields/Remaining_Pledge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Pledge_Amount__c</fullName>
    <description>Remaining amount of Pledge</description>
    <formula>If(Pledged_Amount__c - AmountWonOpportunities &gt;0,Pledged_Amount__c - AmountWonOpportunities,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Pledge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>