force-app/main/default/objects/Campaign/fields/Remaining_Target__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Target__c</fullName>
    <formula>if(Pledged_Amount__c  -   AmountWonOpportunities&gt;0,( Pledged_Amount__c  -   AmountWonOpportunities  )/ Pledged_Amount__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>