force-app/main/default/objects/Campaign/fields/Retry_Intervals__c.field-meta.xml
<CustomField>
    <fullName>Retry_Intervals__c</fullName>
    <defaultValue>72</defaultValue>
    <inlineHelpText>Retry Interval between First Call to Next Call</inlineHelpText>
    <label>Retry Intervals(In Hours)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>