force-app/main/default/objects/Campaign/fields/Speaker_Artist__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Artist__c</fullName>
    <label>Speaker/ Artist</label>
    <length>80</length>
    <type>Text</type>
</CustomField>