force-app/main/default/objects/Campaign/fields/Total_Funds_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Total_Funds_Allocated__c</fullName>
    <label>Total Funds Allocated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>