force-app/main/default/objects/Campaign/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <label>Unique Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>