force-app/main/default/objects/Campaign/fields/Upload_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Upload_Transaction_ID__c</fullName>
    <label>Upload Transaction ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>