force-app/main/default/objects/Campaign/recordTypes/Departmental.recordType-meta.xml
<RecordType>
    <fullName>Departmental</fullName>
    <active>true</active>
    <description>For department initiatives</description>
    <label>Departmental</label>
</RecordType>