force-app/main/default/objects/Campaign/recordTypes/Donor_Pledge.recordType-meta.xml
<RecordType>
    <fullName>Donor_Pledge</fullName>
    <active>true</active>
    <label>Donor Pledge</label>
</RecordType>