force-app/main/default/objects/Campaign/recordTypes/Human_Appeal.recordType-meta.xml
<RecordType>
    <fullName>Human_Appeal</fullName>
    <active>true</active>
    <description>For org-wide campaigns</description>
    <label>Human Appeal</label>
</RecordType>