force-app/main/default/objects/Campaign/recordTypes/Pledge.recordType-meta.xml
<RecordType>
    <fullName>Pledge</fullName>
    <active>true</active>
    <description>Pledges for Fundraising pages</description>
    <label>Agency Pledge</label>
</RecordType>