force-app/main/default/objects/Campaign/validationRules/Pledge_campaign_not_be_used_as_parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Pledge_campaign_not_be_used_as_parent</fullName>
    <active>true</active>
    <description>Pledged campaign should not be used as parent campaign.</description>
    <errorConditionFormula>Parent.RecordType.DeveloperName =  &apos;Pledge&apos;</errorConditionFormula>
    <errorDisplayField>ParentId</errorDisplayField>
    <errorMessage>Pledge should not be selected as Parent Campaign</errorMessage>
</ValidationRule>