force-app/main/default/objects/Campaign/validationRules/Regional_Office_Code_Required_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Regional_Office_Code_Required_Validation</fullName>
    <active>true</active>
    <description>Regional Office Code is Required</description>
    <errorConditionFormula>ISBLANK(TEXT(Regional_Office_Code__c))</errorConditionFormula>
    <errorDisplayField>Regional_Office_Code__c</errorDisplayField>
    <errorMessage>Please Select Regional Office Code</errorMessage>
</ValidationRule>