force-app/main/default/objects/Campaign/validationRules/Restrict_user_change_active_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_user_change_active_field</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(IsActive), Call_List_Clearing_In_Progress__c = true)</errorConditionFormula>
    <errorMessage>Queue Clearing Process is currently In Progress, Active field can be changed only after the process is completed</errorMessage>
</ValidationRule>