force-app/main/default/objects/Campaign/listViews/All_Campaigns_created_today.listView-meta.xml
<ListView>
    <fullName>All_Campaigns_created_today</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>AMOUNT_WON</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>Fundraising</value>
    </filters>
    <label>All Campaigns - Fundraising</label>
</ListView>